index file named changed in all html files

--- a/demo-freelancer-works.html
+++ b/demo-freelancer-works.html
@@ -54,12 +54,12 @@
               <!-- Logo
 						============================================= -->
               <div id="logo">
-                <a href="demo-freelancer.html" class="standard-logo"
+                <a href="index.html" class="standard-logo"
                   ><img
                     src="demos/freelancer/images/newlogo.png"
                     alt="Canvas Logo"
                 /></a>
-                <a href="demo-freelancer.html" class="retina-logo"
+                <a href="index.html" class="retina-logo"
                   ><img
                     src="demos/freelancer/images/newlogo.png"
                     alt="Canvas Logo"
@@ -92,7 +92,7 @@
               <nav class="primary-menu">
                 <ul class="menu-container">
                   <li class="menu-item">
-                    <a class="menu-link" href="demo-freelancer.html"
+                    <a class="menu-link" href="index.html"
                       ><div>Home</div></a
                     >
                   </li>
