--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
               <!-- Logo
 						============================================= -->
               <div id="logo">
-                <a href="demo-freelancer.html" class="standard-logo"
+                <a href="index.html" class="standard-logo"
                   ><img
                     src="demos/freelancer/images/newlogo.png"
                     alt="Infocus Logo"
                 /></a>
-                <a href="demo-freelancer.html" class="retina-logo"
+                <a href="index.html" class="retina-logo"
                   ><img
                     src="demos/freelancer/images/newlogo.png"
                     alt="Infocus Logo"
@@ -93,7 +93,7 @@
               <nav class="primary-menu">
                 <ul class="menu-container">
                   <li class="menu-item">
-                    <a class="menu-link" href="demo-freelancer.html"
+                    <a class="menu-link" href="index.html"
                       ><div>Home</div></a
                     >
                   </li>
