added meta tag and fav icon

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html dir="ltr" lang="en-US">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="author" content="SemiColonWeb" />
-
+    <meta name="author" content="InfocusCS" />
+    <meta name = "keywords" content = "Infocus, InfocusCS, Oracle Integration Cloud, OIC" />
+    <meta name = "description" content = "Infocus Consulting Services is a young and dynamic company, has been established in year of 2020 with a mission of becoming a respected organization, Known for excellence and distinctive services." />
+    <meta name = "author" content = "InfocusCS" />
+      
     <!-- Stylesheets
 	============================================= -->
     <link
@@ -40,6 +43,7 @@
     <!-- Document Title
 	============================================= -->
     <title>Infocus Consultant Services | Empowering Services</title>
+    <link rel="shortcut icon" type="image/ico" href="demos/freelancer/images/favico/favicon-32x32.png"/>
   </head>
 
   <body class="stretched">
