--- a/demo-freelancer-oracleerp.html
+++ b/demo-freelancer-oracleerp.html
@@ -2,7 +2,10 @@
 <html dir="ltr" lang="en-US">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <meta name="author" content="SemiColonWeb" />
+    <meta name="author" content="InfocusCS" />
+    <meta name = "keywords" content = "Infocus, InfocusCS, Oracle Integration Cloud, OIC" />
+    <meta name = "description" content = "Infocus Consulting Services is a young and dynamic company, has been established in year of 2020 with a mission of becoming a respected organization, Known for excellence and distinctive services." />
+    <meta name = "author" content = "InfocusCS" />
 
     <!-- Stylesheets
 	============================================= -->
@@ -43,6 +46,7 @@
     <!-- Document Title
 	============================================= -->
     <title>Oracle ERP Solutions | Infocus Consulting Services</title>
+    <link rel="shortcut icon" type="image/ico" href="demos/freelancer/images/favico/favicon-32x32.png"/>
   </head>
 
   <body class="stretched">
