modified with a11y settings

--- a/demo-freelancer-about.html
+++ b/demo-freelancer-about.html
@@ -41,7 +41,7 @@
 
     <!-- Document Title
 	============================================= -->
-    <title>About Us - Infocus | Canvas</title>
+    <title>About Us - Infocus Consulting Services | Empowering Services</title>
     <link rel="shortcut icon" type="image/ico" href="demos/freelancer/images/favico/favicon-32x32.png"/>
   </head>
 
@@ -61,19 +61,19 @@
                 <a href="index.html" class="standard-logo"
                   ><img
                     src="demos/freelancer/images/newlogo.png"
-                    alt="Canvas Logo"
+                    alt="InfocusCS Logo"
                 /></a>
                 <a href="demo-index.html" class="retina-logo"
                   ><img
                     src="demos/freelancer/images/newlogo.png"
-                    alt="Canvas Logo"
+                    alt="InfocusCS Logo"
                 /></a>
               </div>
               <!-- #logo end -->
 
               <div class="header-misc">
                 <a
-                  href="mailto:noreply@canvas.com"
+                  href="mailto:hr@infocuscs.com"
                   class="button button-border rounded-pill"
                   >Email Us</a
                 >
@@ -351,6 +351,7 @@
                     href="#"
                     class="social-icon si-small si-colored si-facebook"
                     target="_blank"
+                    aria-label="Facebook"
                   >
                     <i class="icon-facebook"></i>
                     <i class="icon-facebook"></i>
@@ -359,6 +360,7 @@
                     href="#"
                     class="social-icon si-small si-colored si-linkedin"
                     target="_blank"
+                    aria-label="Linkedin"
                   >
                     <i class="icon-linkedin"></i>
                     <i class="icon-linkedin"></i>
@@ -368,6 +370,7 @@
                     href="#"
                     class="social-icon si-small si-colored si-youtube"
                     target="_blank"
+                    aria-label="Youtube"
                   >
                     <i class="icon-youtube"></i>
                     <i class="icon-youtube"></i>
