--- a/demo-freelancer-works.html
+++ b/demo-freelancer-works.html
@@ -41,7 +41,7 @@
 
     <!-- Document Title
 	============================================= -->
-    <title>Solutions - Freelancer | Canvas</title>
+    <title>Solutions - Infocus Consulting Services | Empowering Services</title>
     <link rel="shortcut icon" type="image/ico" href="demos/freelancer/images/favico/favicon-32x32.png"/>
   </head>
 
@@ -61,19 +61,19 @@
                 <a href="index.html" class="standard-logo"
                   ><img
                     src="demos/freelancer/images/newlogo.png"
-                    alt="Canvas Logo"
+                    alt="InfocusCS Logo"
                 /></a>
                 <a href="index.html" class="retina-logo"
                   ><img
                     src="demos/freelancer/images/newlogo.png"
-                    alt="Canvas Logo"
+                    alt="InfocusCS Logo"
                 /></a>
               </div>
               <!-- #logo end -->
 
               <div class="header-misc">
                 <a
-                  href="mailto:noreply@canvas.com"
+                  href="mailto:hr@infocuscs.com"
                   class="button button-border rounded-pill"
                   >Email Us</a
                 >
@@ -331,6 +331,7 @@
                     href="#"
                     class="social-icon si-small si-colored si-facebook"
                     target="_blank"
+                    aria-label="Facebook"
                   >
                     <i class="icon-facebook"></i>
                     <i class="icon-facebook"></i>
@@ -339,6 +340,7 @@
                     href="#"
                     class="social-icon si-small si-colored si-linkedin"
                     target="_blank"
+                    aria-label="Linkedin"
                   >
                     <i class="icon-linkedin"></i>
                     <i class="icon-linkedin"></i>
@@ -348,6 +350,7 @@
                     href="#"
                     class="social-icon si-small si-colored si-youtube"
                     target="_blank"
+                    aria-label="Youtube"
                   >
                     <i class="icon-youtube"></i>
                     <i class="icon-youtube"></i>
