--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- Document Title
 	============================================= -->
-    <title>Infocus Consultant Services | Empowering Services</title>
+    <title>Infocus Consulting Services | Empowering Services</title>
     <link rel="shortcut icon" type="image/ico" href="demos/freelancer/images/favico/favicon-32x32.png"/>
   </head>
 
@@ -360,7 +360,7 @@
                           <div class="testi-meta d-flex align-items-center">
                             <img
                               src="demos/freelancer/images/testi/spectrum-3.svg"
-                              alt="Face"
+                              alt="Spectrum Logo"
                               width="30"
                             />
                             <div>
@@ -384,7 +384,7 @@
                           <div class="testi-meta d-flex align-items-center">
                             <img
                               src="demos/freelancer/images/testi/Oracle-01.png"
-                              alt="Face"
+                              alt="Oracle Logo"
                               width="30"
                             />
                             <div>
@@ -399,7 +399,7 @@
                 </div>
 
                 <div class="col-lg-6">
-                  <img src="demos/freelancer/images/testi/bg.svg" alt="" />
+                  <img src="demos/freelancer/images/testi/bg.svg" alt="background-image" />
                 </div>
               </div>
             </div>
@@ -439,7 +439,7 @@
                     <div class="portfolio-image">
                       <img
                         src="demos/freelancer/images/works/wallpaperflare.com_wallpaper.jpg"
-                        alt="Portfoio Item"
+                        alt="Oracle ERP image"
                       />
                       <div class="bg-overlay">
                         <div
@@ -477,7 +477,7 @@
                     <div class="portfolio-image">
                       <img
                         src="demos/freelancer/images/works/works-2.jpg"
-                        alt="Portfoio Item"
+                        alt="Oracle Integration Solutions image"
                       />
                       <div class="bg-overlay">
                         <div
@@ -514,7 +514,7 @@
                     <div class="portfolio-image">
                       <img
                         src="demos/freelancer/images/works/works-3.jpg"
-                        alt="Portfoio Item"
+                        alt="Oracle RODOD"
                       />
                       <div class="bg-overlay">
                         <div
@@ -551,7 +551,7 @@
                     <div class="portfolio-image">
                       <img
                         src="demos/freelancer/images/works/works-4.jpg"
-                        alt="Portfoio Item"
+                        alt="Oracle Integration Cloud"
                       />
                       <div class="bg-overlay">
                         <div
@@ -991,6 +991,7 @@
                     <a
                       href="#"
                       class="social-icon si-small si-colored si-facebook"
+                      aria-label="Facebook"
                       target="_blank"
                     >
                       <i class="icon-facebook"></i>
@@ -1000,6 +1001,7 @@
                       href="#"
                       class="social-icon si-small si-colored si-linkedin"
                       target="_blank"
+                      aria-label="Linkedin"
                     >
                       <i class="icon-linkedin"></i>
                       <i class="icon-linkedin"></i>
@@ -1009,6 +1011,7 @@
                       href="#"
                       class="social-icon si-small si-colored si-youtube"
                       target="_blank"
+                      aria-label="Youtube"
                     >
                       <i class="icon-youtube"></i>
                       <i class="icon-youtube"></i>
