--- a/demo-freelancer-oracleintegcloud.html
+++ b/demo-freelancer-oracleintegcloud.html
@@ -65,19 +65,19 @@
                 <a href="index.html" class="standard-logo"
                   ><img
                     src="demos/freelancer/images/newlogo.png"
-                    alt="Canvas Logo"
+                    alt="InfocusCS Logo"
                 /></a>
                 <a href="index.html" class="retina-logo"
                   ><img
                     src="demos/freelancer/images/newlogo.png"
-                    alt="Canvas Logo"
+                    alt="InfocusCS Logo"
                 /></a>
               </div>
               <!-- #logo end -->
 
               <div class="header-misc">
                 <a
-                  href="mailto:noreply@canvas.com"
+                  href="mailto:hr@infocuscs.com"
                   class="button button-border rounded-pill"
                   >Email Us</a
                 >
@@ -195,7 +195,7 @@
                     <div class="item active">
                       <img
                         src="demos/freelancer/images/oracle_Rodod.jpg"
-                        alt="Los Angeles"
+                        alt="Oracle RODOD image"
                         style="width: 100%"
                       />
                     </div>
@@ -203,7 +203,7 @@
                     <div class="item">
                       <img
                         src="demos/freelancer/images/oracle_integration_cloud.png"
-                        alt="Chicago"
+                        alt="Oracle Integration Cloud image"
                         style="width: 100%"
                       />
                     </div>
@@ -211,7 +211,7 @@
                     <div class="item">
                       <img
                         src="demos/freelancer/images/erp-cloud.png"
-                        alt="New york"
+                        alt="Oracle ERP"
                         style="width: 100%"
                       />
                     </div>
@@ -266,6 +266,7 @@
                     href="#"
                     class="social-icon si-small si-colored si-facebook"
                     target="_blank"
+                    aria-label="Facebook"
                   >
                     <i class="icon-facebook"></i>
                     <i class="icon-facebook"></i>
@@ -274,6 +275,7 @@
                     href="#"
                     class="social-icon si-small si-colored si-linkedin"
                     target="_blank"
+                    aria-label="Linkedin"
                   >
                     <i class="icon-linkedin"></i>
                     <i class="icon-linkedin"></i>
@@ -283,6 +285,7 @@
                     href="#"
                     class="social-icon si-small si-colored si-youtube"
                     target="_blank"
+                    aria-label="Youtube"
                   >
                     <i class="icon-youtube"></i>
                     <i class="icon-youtube"></i>
